# rusty-rival

./: .dockerignore  .gitignore  CLAUDE.md  COMPETE.md  Cargo.toml  Dockerfile  README.md  cute-rusty.sh  cute.sh  cute103-special.sh  cuteblunder.sh  cutehask.sh  docker-compose.yml  e  history.txt  perf.data  perf.data.old  stamp.sh  tournament1
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.claude/commands/: version.md
.github/workflows/: build.yml  release.yml
benches/: perft.rs
docs/: chess-programming-fundamentals-outline.md  java-vs-rust-comparison.md  perft-vs-search-performance.md  search.md  spsa.md
engines/: engines.json
epd/: sts-v3.epd
examples/: test_corruption.rs
hooks/: pre-commit
inputs/: 0.25.txt  test.txt
notes/: odd1.txt  rankings.txt  simple_score.txt
results/: 1000000.txt  120000.txt  250.txt  30000.txt  5000.txt  bench.txt  combined.txt  elo_ratings.json  elo_ratings.old.2.json  elo_ratings.old.json
scripts/: .cute-rusty.sh.swp  benchmark.py  build_engines.sh  compete.py  compete.sh  cute-rusty.sh  cute103.sh  cutex.sh  download_syzygy.py  elo_table.py  history.txt  hotfix_engines.py  migrate_pgn.py  release.py  sync_engines.py
spsa/: __init__.py  build.py  config.toml  master.py  params.toml
src/: bitboards.rs  engine.kt  engine_constants.rs  evaluate.rs  fen.rs  hash.rs  lib.rs  magic_bitboards.rs  magic_moves_bishop.rs  magic_moves_rook.rs  main.rs  make_move.rs  material_imbalance.rs  move_constants.rs  move_scores.rs  moves.rs  mvm_test_fens.rs  perft.rs  piece_square_tables.rs  quiesce.rs  scan.rs  search.rs  see.rs  tablebase.rs  types.rs  uci.rs  uci_bench.rs  utils.rs
src/types/: mod.rs
tests/: bitboards.rs  epd.rs  evaluate.rs  fen.rs  make_move.rs  make_unmake.rs  moves.rs  perft.rs  perft_long.rs  piece_square_tables.rs  search.rs  see.rs  types.rs  uci.rs  utils.rs  zobrist_consistency.rs
web/: app.py  database.py  models.py  queries.py  requirements.txt  routes.py
(+147 files in other folders)
