[package]
name = "rusty-rival"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-format = "0.4.0"
rand = "0.8.4"
either = "1.6.1"
regex = "1.5.4"
arrayvec = "0.7.2"
rayon = "1.5.1"
ansi_term = "0.12.1"
rustyline = "11.0.0"
screenshots = "0.5.3"
fs = "0.0.5"
image = "0.24.6"
opencv = "0.78.2"
md5 = "0.7.0"
scrap = "0.5.0"



