[package]
name = "rusty-rival"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-format = "0.4.4"
rand = "0.8.5"
either = "1.9.0"
regex = "1.10.1"
arrayvec = "0.7.4"
rayon = "1.8.0"
ansi_term = "0.12.1"
rustyline = "12.0.0"
fs = "0.0.5"
#image = "0.24.7"
#screenshots = "0.8.4"
#opencv = "0.85.1"
md5 = "0.7.0"
scrap = "0.5.0"
colored = "2.0.4"
figlet-rs = "0.1.5"
crossterm = "0.27.0"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
