[package]
name = "rusty-rival"
version = "1.0.24-rc14"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
shakmaty = "0.27"
shakmaty-syzygy = "0.25"
num-format = "0.4.4"
rand = "0.8.5"
either = "1.9.0"
regex = "1.10.1"
arrayvec = "0.7.4"
rayon = "1.8.0"
ansi_term = "0.12.1"
rustyline = "12.0.0"
fs = "0.0.5"
md5 = "0.7.0"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
